Update front end-logic create competition